# SMElib

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  bootstrap  compile_smelib.sh  configure.ac  issue.md
.github/workflows/: clean_artifacts.yml  make.yml  make_bak.yml  make_manual.yml
pymodule/: _smelib.cpp  setup.py
src/data/: Fe1_Zatsarinny2019.dat.INTEL
src/eos/: DEFAULT.EOS.current  eos.f  kp_q_spln.f
src/sme/: hlinop.f  hlinprof.f  sme_synth_faster.cpp  sme_synth_faster.h
test/: cwrapper.py  requirements.txt
